unpackaged/main/default/objects/PagesApi__Field_Response__c/PagesApi__Field_Response__c.object-meta.xml
<CustomObject>
    <description>Object used to identify the responses from form submissions.</description>
    <label>Field Response</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Field Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>