unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/EventApi__Attendee__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link between the Field Response and the Attendee. Used to display registration question answers.</description>
    <inlineHelpText>** System Calculated ** Link between the Field Response and the Attendee. Used to display registration question answers.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>EventApi__Attendee__c</referenceTo>
    <relationshipLabel>Registration Form Details</relationshipLabel>
    <relationshipName>Field_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>