unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/EventApi__Speaker__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link between the Field Response and the Speaker. Used to display Speaker Contract &amp; Agreement information on the Speaker record.</description>
    <inlineHelpText>** System Calculated ** Link between the Field Response and the Speaker. Used to display Speaker Contract &amp; Agreement information on the Speaker record.</inlineHelpText>
    <label>Speaker</label>
    <referenceTo>EventApi__Speaker__c</referenceTo>
    <relationshipLabel>Speaker Agreement Details</relationshipLabel>
    <relationshipName>Field_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>