unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/EventApi__Sponsor__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link between the Field Response and the Sponsor. Used to display Sponsor Contract &amp; Agreement information on the Sponsor record.</description>
    <inlineHelpText>** System Calculated ** Link between the Field Response and the Sponsor. Used to display Sponsor Contract &amp; Agreement information on the Sponsor record.</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>EventApi__Sponsor__c</referenceTo>
    <relationshipLabel>Sponsor Agreement Details</relationshipLabel>
    <relationshipName>Field_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>