unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/OrderApi__Form__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to related Form.</description>
    <inlineHelpText>Link to related Form.</inlineHelpText>
    <label>Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Field Responses</relationshipLabel>
    <relationshipName>Field_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>