unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Field_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Field_Help_Text__c</fullName>
    <description>** System Calculated ** Displays the field&#39;s help text.</description>
    <formula>PagesApi__Field__r.PagesApi__Help_Text__c</formula>
    <inlineHelpText>** System Calculated ** Displays the field&#39;s help text.</inlineHelpText>
    <label>Field Help Text</label>
    <type>Text</type>
</CustomField>