unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Field_Label__c</fullName>
    <description>** System Calculated ** Displays the parent field&#39;s label.</description>
    <formula>PagesApi__Field__r.Name</formula>
    <inlineHelpText>** System Calculated ** Displays the parent field&#39;s label.</inlineHelpText>
    <label>Field Label</label>
    <type>Text</type>
</CustomField>