unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Field_Order__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Field_Order__c</fullName>
    <description>** System Calculated ** Displays the order specified on the form.</description>
    <formula>PagesApi__Field__r.PagesApi__Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Displays the order specified on the form.</inlineHelpText>
    <label>Field Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>