unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Field_Response__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Field_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates parent field response record to child field response record.</description>
    <inlineHelpText>Relates parent field response record to child field response record.</inlineHelpText>
    <label>Parent Field Response</label>
    <referenceTo>PagesApi__Field_Response__c</referenceTo>
    <relationshipLabel>Field Responses</relationshipLabel>
    <relationshipName>Field_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>