unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Field_Type__c</fullName>
    <description>** System Calculated ** Displays the field type.</description>
    <formula>TEXT(PagesApi__Field__r.PagesApi__Type__c)</formula>
    <inlineHelpText>** System Calculated ** Displays the field type.</inlineHelpText>
    <label>Field Type</label>
    <type>Text</type>
</CustomField>