unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Mapped_Field__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Mapped_Field__c</fullName>
    <description>** System Calculated ** Displays the mapped field from the parent field.</description>
    <formula>PagesApi__Field__r.PagesApi__Mapped_Field__c</formula>
    <inlineHelpText>** System Calculated ** Displays the mapped field from the parent field.</inlineHelpText>
    <label>Mapped Field</label>
    <type>Text</type>
</CustomField>