unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Report_Response__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Report_Response__c</fullName>
    <description>** Use for Reporting on Responses ** The report response field trims the length of the entered response to restrict size to less than 255 chars. Currently salesforce will not allow a report to perform groupings on long text area fields.</description>
    <inlineHelpText>** Use for Reporting on Responses ** The report response field trims the length of the entered response to restrict size to less than 255 chars. Currently salesforce will not allow a report to perform groupings on long text area fields.</inlineHelpText>
    <label>Report Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>