unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Response__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Response__c</fullName>
    <description>** Required ** Identifies the submitted field&#39;s value.</description>
    <inlineHelpText>** Required ** Identifies the submitted field&#39;s value.</inlineHelpText>
    <label>Response</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>