unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__Response_Group__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Response_Group__c</fullName>
    <description>** SYSTEM FIELD DO NOT EDIT **</description>
    <inlineHelpText>** SYSTEM FIELD DO NOT EDIT **</inlineHelpText>
    <label>Response Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>