unpackaged/main/default/objects/PagesApi__Field_Response__c/fields/PagesApi__System_Reference__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__System_Reference__c</fullName>
    <description>** SYSTEM FIELD  DO NOT EDIT ** Maps created object id for upsert updates.</description>
    <inlineHelpText>** SYSTEM FIELD DO NOT EDIT **  Maps created object id for upsert updates.</inlineHelpText>
    <label>System Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>